--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,16 @@ android {
             signingConfig signingConfigs.release
         }
 
+//        applicationVariants.all { variant ->
+//            variant.outputs.each { output ->
+//                def flavorName = variant.baseName;
+//                output.outputFile = new File("${project.buildDir}/outputs/apk/", "mangosta-" + flavorName + "-" + variant.versionName + "-" + variant.versionCode + ".apk");
+//            }
+//        }
         applicationVariants.all { variant ->
-            variant.outputs.each { output ->
-                def flavorName = variant.baseName;
-                output.outputFile = new File("${project.buildDir}/outputs/apk/", "mangosta-" + flavorName + "-" + variant.versionName + "-" + variant.versionCode + ".apk");
+            variant.outputs.all { output ->
+                def flavorName = variant.baseName
+                output.outputFileName = "mangosta-${flavorName}-${variant.versionName}-${variant.versionCode}.apk"
             }
         }
     }
@@ -57,7 +63,12 @@ android {
 
 buildscript {
     repositories {
+        google()
+        mavenCentral()
         jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://dl.bintray.com/yummylau/maven' }
     }
     dependencies {
         // Realm
@@ -66,10 +77,12 @@ buildscript {
 }
 
 repositories {
-    maven {
-        url 'https://oss.sonatype.org/content/repositories/snapshots'
-    }
+    google()
     mavenCentral()
+    jcenter()
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+    maven { url 'https://dl.bintray.com/yummylau/maven' }
 }
 
 dependencies {
@@ -109,7 +122,9 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
 
     // Butterknife
-    compile 'com.jakewharton:butterknife:7.0.1'
+    implementation 'com.jakewharton:butterknife:8.8.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
+
 
     // PagerSlidingTabStrip
     compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
