--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 34
+//    buildToolsVersion "25.0.2"
 
     defaultConfig {
         applicationId "inaka.com.mangosta"
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 34
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
